[tool.poetry]
name = "auto-track"
version = "0.1.0"
description = ""
authors = ["tim-hudelmaier <tim.hudelmaier@stud.uni-heidelberg.de>"]
readme = "README.md"
packages = [{include = "auto_track"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
