[tool.poetry]
name = "auto-track"
version = "0.1.0"
description = ""
authors = ["tim-hudelmaier <tim.hudelmaier@stud.uni-heidelberg.de>"]
readme = "README.md"
packages = [{include = "auto_track"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
torch = "^2.2.2"
pytest = "^8.1.1"
black = "^24.4.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
