[tool.poetry]
name = "auto-track"
version = "0.1.0"
description = ""
authors = ["tim-hudelmaier <tim.hudelmaier@stud.uni-heidelberg.de>"]
readme = "README.md"
packages = [{include = "auto_track"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
torch = "^2.2.2"
pytest = "^8.1.1"
black = "^24.4.0"
loguru = "^0.7.2"
pandas-stubs = "^2.2.1.240316"


[tool.poetry.group.test.dependencies]
tox = "^4.14.2"
mypy = "^1.9.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
